--- a/pages/credits.html
+++ b/pages/credits.html
@@ -2,8 +2,8 @@
     document.title = "Website Credits – Floofi";
 </script>
 
-<section id="credits" class="text-section">
-    <h2 class="title title-centered">Website Credits</h2>
+<section id="credits" class="fella-section">
+    <h2 class="fella-title fella-title-centered">Website Credits</h2>
 
     <div id="credits-grid">
         <div class="credits-grid-title">Lead<br>Programming<br>Design</div>
