--- a/pages/home.html
+++ b/pages/home.html
@@ -3,30 +3,30 @@
 </script>
 
 <section id="home">
-    <div id="home-notice">
+    <div id="home-notice" class="fella-header">
         Thank you for being part of the Early Access Program. Please visit various parts of the website on various devices.
-        <a href="mailto:hello@equestria.dev" class="btn btn-secondary btn-cta-small" id="home-notice-btn">
-            <span class="btn-cta-text">Send a Bug Report</span>
+        <a href="mailto:hello@equestria.dev" class="fella-btn fella-btn-secondary fella-btn-cta-small fella-header-btn" id="home-notice-btn">
+            <span class="fella-btn-cta-text">Send a Bug Report</span>
         </a>
     </div>
-    <div id="home-hero">
-        <div id="home-hero-inner">
-            <div id="home-hero-text">
-            <div id="home-hero-title">
-                <div id="home-hero-title-headline">
-                    Technology for creatures who matter.
+    <div id="home-hero" class="fella-hero">
+        <div id="home-hero-inner" class="fella-hero-inner">
+            <div id="home-hero-text" class="fella-hero-text">
+                <div id="home-hero-title" class="fella-hero-title">
+                    <div id="home-hero-title-headline" class="fella-hero-headline">
+                        Technology for creatures who matter.
+                    </div>
+                    <div id="home-hero-title-tagline" class="fella-hero-tagline">
+                        Floofi provides you with tools and applications to develop your activities while staying true to yourself.
+                    </div>
+                    <a href="/projects" class="fella-btn fella-btn-primary fella-btn-cta fella-hero-cta" id="home-hero-cta">
+                        <svg class="fella-btn-cta-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m10.065 12.493-6.18 1.318a.934.934 0 0 1-1.108-.702l-.537-2.15a1.07 1.07 0 0 1 .691-1.265l13.504-4.44"/><path d="m13.56 11.747 4.332-.924"/><path d="m16 21-3.105-6.21"/><path d="M16.485 5.94a2 2 0 0 1 1.455-2.425l1.09-.272a1 1 0 0 1 1.212.727l1.515 6.06a1 1 0 0 1-.727 1.213l-1.09.272a2 2 0 0 1-2.425-1.455z"/><path d="m6.158 8.633 1.114 4.456"/><path d="m8 21 3.105-6.21"/><circle cx="12" cy="13" r="2"/></svg>
+                        <span class="fella-btn-cta-text">Start Exploring</span>
+                    </a>
                 </div>
-                <div id="home-hero-title-tagline">
-                    Floofi provides you with tools and applications to develop your activities while staying true to yourself.
-                </div>
-                <a href="/projects" class="btn btn-primary btn-cta" id="home-hero-cta">
-                    <svg class="btn-cta-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m10.065 12.493-6.18 1.318a.934.934 0 0 1-1.108-.702l-.537-2.15a1.07 1.07 0 0 1 .691-1.265l13.504-4.44"/><path d="m13.56 11.747 4.332-.924"/><path d="m16 21-3.105-6.21"/><path d="M16.485 5.94a2 2 0 0 1 1.455-2.425l1.09-.272a1 1 0 0 1 1.212.727l1.515 6.06a1 1 0 0 1-.727 1.213l-1.09.272a2 2 0 0 1-2.425-1.455z"/><path d="m6.158 8.633 1.114 4.456"/><path d="m8 21 3.105-6.21"/><circle cx="12" cy="13" r="2"/></svg>
-                    <span class="btn-cta-text">Start Exploring</span>
-                </a>
             </div>
-            </div>
-            <div id="home-hero-image">
-                <svg id="home-hero-image-inner" viewBox="0 0 240.32 239.18">
+            <div id="home-hero-image" class="fella-hero-image">
+                <svg id="home-hero-image-inner" class="fella-hero-image-inner" viewBox="0 0 240.32 239.18">
                     <g id="home-hero-background">
                         <linearGradient id="home-hero-background-rainbow" gradientUnits="userSpaceOnUse" x1="80.9372" y1="149.7796" x2="159.211" y2="71.5058">
                             <stop  offset="0" style="stop-color:#FF0000"/>
@@ -36,7 +36,7 @@
                             <stop  offset="0.8" style="stop-color:#E600FF"/>
                             <stop  offset="1" style="stop-color:#FF0000"/>
                         </linearGradient>
-                        <path id="home-hero-background-path" style="fill:url(#home-hero-background-rainbow);" d="M156.392,133.722c0.118,1.188,0.177,2.389,0.177,3.605c0,20.15-16.337,36.486-36.486,36.486
+                        <path id="home-hero-background-path" class="fella-hero-background-path" style="fill:url(#home-hero-background-rainbow);" d="M156.392,133.722c0.118,1.188,0.177,2.389,0.177,3.605c0,20.15-16.337,36.486-36.486,36.486
 		s-36.486-16.337-36.486-36.486c0-1.333,0.073-2.648,0.213-3.945c-10.837-6.325-18.118-18.078-18.118-31.535
 		c0-20.15,16.332-36.482,36.482-36.482c6.638,0,12.863,1.768,18.223,4.865c5.264-2.947,11.331-4.629,17.797-4.629
 		c20.154,0,36.486,16.337,36.486,36.486C174.678,115.608,167.324,127.415,156.392,133.722z"/>
@@ -83,76 +83,75 @@
                         </g>
                     </g>
                 </svg>
-
             </div>
         </div>
     </div>
 
-    <h2 class="title">How Floofi can help you</h2>
-    <div id="home-cards">
-        <div class="home-card" id="home-card-0">
-            <div class="home-card-header" id="home-card-0-header">
+    <h2 class="fella-title fella-title-intro">How Floofi can help you</h2>
+    <div id="home-cards" class="fella-card-container">
+        <div class="fella-card fella-card-sm fella-card-modern" id="home-card-0">
+            <div class="fella-card-header" id="home-card-0-header">
                 <svg class="home-card-icon" id="home-card-0-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="16 18 22 12 16 6"/><polyline points="8 6 2 12 8 18"/></svg>
                 <span class="home-card-title" id="home-card-0-title">Systems Programming</span>
             </div>
-            <div class="home-card-content" id="home-card-0-content">
+            <div class="fella-card-content" id="home-card-0-content">
                 Computer systems need to function well and fast. That's why we build our systems using safer languages and extensive testing.
             </div>
         </div>
-        <div class="home-card" id="home-card-1">
-            <div class="home-card-header" id="home-card-1-header">
+        <div class="fella-card fella-card-sm fella-card-modern" id="home-card-1">
+            <div class="fella-card-header" id="home-card-1-header">
                 <svg class="home-card-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="16" y="16" width="6" height="6" rx="1"/><rect x="2" y="16" width="6" height="6" rx="1"/><rect x="9" y="2" width="6" height="6" rx="1"/><path d="M5 16v-3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3"/><path d="M12 12V8"/></svg>
                 <span class="home-card-title" id="home-card-1-title">Hosting and Networking</span>
             </div>
-            <div class="home-card-content" id="home-card-1-content">
+            <div class="fella-card-content" id="home-card-1-content">
                 With our experience managing a medium-sized infrastructure of multiple services, we can help bring your ideas to the masses.
             </div>
         </div>
-        <div class="home-card" id="home-card-2">
-            <div class="home-card-header" id="home-card-2-header">
+        <div class="fella-card fella-card-sm fella-card-modern" id="home-card-2">
+            <div class="fella-card-header" id="home-card-2-header">
                 <svg class="home-card-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 18h8"/><path d="M3 22h18"/><path d="M14 22a7 7 0 1 0 0-14h-1"/><path d="M9 14h2"/><path d="M9 12a2 2 0 0 1-2-2V6h6v4a2 2 0 0 1-2 2Z"/><path d="M12 6V3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3"/></svg>
                 <span class="home-card-title" id="home-card-2-title">Scientific Research</span>
             </div>
-            <div class="home-card-content" id="home-card-2-content">
+            <div class="fella-card-content" id="home-card-2-content">
                 We invest a significant part of our resources into developing innovative solutions to improve creature lives and wellbeings.
             </div>
         </div>
-        <div class="home-card" id="home-card-3">
-            <div class="home-card-header" id="home-card-3-header">
+        <div class="fella-card fella-card-sm fella-card-modern" id="home-card-3">
+            <div class="fella-card-header" id="home-card-3-header">
                 <svg class="home-card-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="4" r="2"/><circle cx="18" cy="8" r="2"/><circle cx="20" cy="16" r="2"/><path d="M9 10a5 5 0 0 1 5 5v3.5a3.5 3.5 0 0 1-6.84 1.045Q6.52 17.48 4.46 16.84A3.5 3.5 0 0 1 5.5 10Z"/></svg>
                 <span class="home-card-title" id="home-card-3-title">Subcultures and Furries</span>
             </div>
-            <div class="home-card-content" id="home-card-3-content">
+            <div class="fella-card-content" id="home-card-3-content">
                 Our projects, studies and research are primarily oriented towards small subcultures, such as furries.
             </div>
         </div>
     </div>
 
-    <div id="home-cta">
-        <div id="home-cta-left">
-            <div id="home-cta-title">
-                <span id="home-cta-title-focus">Want to give us a try?</span>
+    <div id="home-cta" class="fella-card fella-card-xl fella-card-cta">
+        <div id="home-cta-left" class="fella-hero-cta-left">
+            <div id="home-cta-title" class="fella-hero-cta-title">
+                <span id="home-cta-title-focus" class="fella-hero-cta-title-focus">Want to give us a try?</span>
                 <span id="home-cta-title-message">Start with our projects right away.<br>Get in touch with your ideas and we can work together.</span>
             </div>
-            <div id="home-cta-buttons">
-                <a href="/projects" class="btn btn-primary btn-cta-small" id="home-cta-button-start">
-                    <span class="btn-cta-text">Start Exploring</span>
+            <div id="home-cta-buttons" class="fella-hero-cta-buttons">
+                <a href="/projects" class="fella-btn fella-btn-primary fella-btn-cta-small" id="home-cta-button-start">
+                    <span class="fella-btn-cta-text">Start Exploring</span>
                 </a>
-                <a href="/contact" class="btn btn-secondary btn-cta-small" id="home-cta-button-contact">
-                    <span class="btn-cta-text">Contact our Team</span>
+                <a href="/contact" class="fella-btn fella-btn-secondary fella-btn-cta-small" id="home-cta-button-contact">
+                    <span class="fella-btn-cta-text">Contact our Team</span>
                 </a>
             </div>
         </div>
-        <div id="home-cta-right">
-            <div id="home-cta-orgs">
-                <span id="home-cta-orgs-focus">Discover Floofi for Nonprofits</span>
+        <div id="home-cta-right" class="fella-hero-cta-right">
+            <div id="home-cta-orgs" class="fella-hero-cta-orgs">
+                <span id="home-cta-orgs-focus" class="fella-hero-cta-orgs-focus">Discover Floofi for Nonprofits</span>
                 <span id="home-cta-orgs-message">and widen your online visibility using Floofi's platform, for free.</span>
             </div>
-            <div id="home-cta-orgs-btns">
-                <a href="/contact/start?i=9" class="btn btn-secondary btn-cta-small" id="home-cta-orgs-start">
-                    <span class="btn-cta-text">Request Access</span>
+            <div id="home-cta-orgs-btns" class="fella-hero-cta-buttons">
+                <a href="/contact/start?i=9" class="fella-btn fella-btn-secondary fella-btn-cta-small" id="home-cta-orgs-start">
+                    <span class="fella-btn-cta-text">Request Access</span>
                 </a>
-                <span class="badge-beta" id="home-cta-orgs-beta">
+                <span class="fella-badge-notice" id="home-cta-orgs-beta">
                     In Beta
                 </span>
             </div>
