--- a/pages/404.html
+++ b/pages/404.html
@@ -2,11 +2,11 @@
     document.title = "Error 404 – Floofi";
 </script>
 
-<div id="error-page">
+<div id="error-page" class="fella-error">
     <div id="error-page-inner">
-        <img src="/assets/img/error.svg" id="error-page-logo" alt="Logo">
-        <h1 id="error-page-title">404</h1>
-        <p id="error-page-description">We couldn't find the page you are looking for.</p>
-        <a class="btn btn-primary btn-flush btn-large" id="error-page-btn" href="/">Go back to the home page</a>
+        <img src="/assets/img/error.svg" id="error-page-logo" alt="Logo" class="fella-error-icon">
+        <h1 id="error-page-title" class="fella-error-title">404</h1>
+        <p id="error-page-description" class="fella-error-message">We couldn't find the page you are looking for.</p>
+        <a class="fella-btn fella-btn-primary fella-btn-flush fella-btn-large fella-error-btn" id="error-page-btn" href="/">Go back to the home page</a>
     </div>
 </div>
