--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,55 +2,55 @@
     document.title = "Contact Us – Floofi";
 </script>
 
-<section id="contact" class="text-section">
-    <h2 class="title title-centered" id="contact-title">Contact us</h2>
-    <div id="contact-grid">
-        <div id="contact-grid-item-1" class="contact-grid-item">
-            <svg class="contact-grid-item-icon" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"/><path d="M8 12h.01"/><path d="M12 12h.01"/><path d="M16 12h.01"/></svg>
-            <div class="contact-grid-item-title">Technical support.</div>
-            <div class="contact-grid-item-text">Get help directly from the people who created your software, or from our community.</div>
-            <div class="contact-grid-item-buttons">
-                <a href="/contact/start?i=4" class="contact-grid-item-button btn btn-primary btn-cta">Get Support</a>
-                <a href="https://status.floo.fi" class="contact-grid-item-button btn btn-secondary btn-cta" id="contact-status">
-                    <span id="contact-status-indicator"></span>
+<section id="contact" class="fella-section">
+    <h2 class="fella-title fella-title-centered fella-contact-title" id="contact-title">Contact us</h2>
+    <div id="contact-grid" class="fella-contact-grid">
+        <div id="contact-grid-item-1" class="fella-contact-grid-item">
+            <svg class="fella-contact-grid-item-icon" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"/><path d="M8 12h.01"/><path d="M12 12h.01"/><path d="M16 12h.01"/></svg>
+            <div class="fella-contact-grid-item-title">Technical support.</div>
+            <div class="fella-contact-grid-item-text">Get help directly from the people who created your software, or from our community.</div>
+            <div class="fella-contact-grid-item-buttons">
+                <a href="/contact/start?i=4" class="fella-contact-grid-item-button fella-btn fella-btn-primary fella-btn-cta">Get Support</a>
+                <a href="https://status.floo.fi" class="fella-contact-grid-item-button fella-btn fella-btn-secondary fella-btn-cta fella-contact-status" id="contact-status">
+                    <span id="contact-status-indicator" class="fella-footer-status-indicator"></span>
                     <span id="contact-status-text">Loading...</span>
                 </a>
             </div>
         </div>
-        <div id="contact-grid-item-2" class="contact-grid-item">
-            <svg class="contact-grid-item-icon" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 21a8 8 0 0 0-16 0"/><circle cx="10" cy="8" r="5"/><path d="M22 20c0-3.37-2-6.5-4-8a5 5 0 0 0-.45-8.3"/></svg>
-            <div class="contact-grid-item-title">Talk to our team.</div>
-            <div class="contact-grid-item-text">Discuss your requirements and request specially-crafted software or enterprise support.</div>
-            <div class="contact-grid-item-buttons">
-                <a href="/contact/start" class="contact-grid-item-button btn btn-primary btn-cta">Contact our Team</a>
+        <div id="contact-grid-item-2" class="fella-contact-grid-item">
+            <svg class="fella-contact-grid-item-icon" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 21a8 8 0 0 0-16 0"/><circle cx="10" cy="8" r="5"/><path d="M22 20c0-3.37-2-6.5-4-8a5 5 0 0 0-.45-8.3"/></svg>
+            <div class="fella-contact-grid-item-title">Talk to our team.</div>
+            <div class="fella-contact-grid-item-text">Discuss your requirements and request specially-crafted software or enterprise support.</div>
+            <div class="fella-contact-grid-item-buttons">
+                <a href="/contact/start" class="fella-contact-grid-item-button fella-btn fella-btn-primary fella-btn-cta">Contact our Team</a>
             </div>
         </div>
     </div>
-    <div id="contact-secondary">
-        <div id="contact-secondary-item-1" class="contact-grid-item">
-            <svg class="contact-grid-item-icon" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"/><path d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"/><path d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"/><path d="M10 6h4"/><path d="M10 10h4"/><path d="M10 14h4"/><path d="M10 18h4"/></svg>
-            <div class="contact-grid-item-secondary">
+    <div id="contact-secondary" class="fella-contact-secondary">
+        <div id="contact-secondary-item-1" class="fella-contact-grid-item">
+            <svg class="fella-contact-grid-item-icon" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"/><path d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"/><path d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"/><path d="M10 6h4"/><path d="M10 10h4"/><path d="M10 14h4"/><path d="M10 18h4"/></svg>
+            <div class="fella-contact-grid-item-secondary">
                 <b>Floofi for Nonprofits is free</b> and is the first nonprofit-to-nonprofit platform, with all the power of Floofi software.
             </div>
-            <div class="contact-grid-item-buttons">
-                <a href="/contact/start?i=9" class="contact-grid-secondary-button btn btn-secondary btn-cta-small">
-                    <span class="btn-cta-text">Contact Nonprofit Support</span>
+            <div class="fella-contact-grid-item-buttons">
+                <a href="/contact/start?i=9" class="fella-contact-grid-secondary-button fella-btn fella-btn-secondary fella-btn-cta-small">
+                    <span class="fella-btn-cta-text">Contact Nonprofit Support</span>
                 </a>
             </div>
         </div>
-        <div id="contact-secondary-item-2" class="contact-grid-item">
-            <svg class="contact-grid-item-icon" height="16" stroke-linejoin="round" style="color: currentcolor;" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" clip-rule="evenodd" d="M0.5 0.5H5.75L9.48421 5.71053L14 0.5H16L10.3895 6.97368L16.5 15.5H11.25L7.51579 10.2895L3 15.5H1L6.61053 9.02632L0.5 0.5ZM12.0204 14L3.42043 2H4.97957L13.5796 14H12.0204Z" fill="currentColor"></path></svg>
-            <div class="contact-grid-item-secondary">
+        <div id="contact-secondary-item-2" class="fella-contact-grid-item">
+            <svg class="fella-contact-grid-item-icon" height="16" stroke-linejoin="round" style="color: currentcolor;" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" clip-rule="evenodd" d="M0.5 0.5H5.75L9.48421 5.71053L14 0.5H16L10.3895 6.97368L16.5 15.5H11.25L7.51579 10.2895L3 15.5H1L6.61053 9.02632L0.5 0.5ZM12.0204 14L3.42043 2H4.97957L13.5796 14H12.0204Z" fill="currentColor"></path></svg>
+            <div class="fella-contact-grid-item-secondary">
                 <b>Follow us on X.</b> Get Floofi information, details about upcoming software, media resources and easier support.
             </div>
-            <div class="contact-grid-item-buttons">
-                <a href="https://x.com/miapone_" class="contact-grid-secondary-button btn btn-secondary btn-cta-small">
-                    <span class="btn-cta-text">Follow @miapone_</span>
+            <div class="fella-contact-grid-item-buttons">
+                <a href="https://x.com/miapone_" target="_blank" class="fella-contact-grid-secondary-button fella-btn fella-btn-secondary fella-btn-cta-small">
+                    <span class="fella-btn-cta-text">Follow @miapone_</span>
                 </a>
             </div>
         </div>
-        <div id="contact-secondary-item-3" class="contact-grid-item">
-            <svg class="contact-grid-item-icon" height="16" stroke-linejoin="round" style="color: currentcolor;" viewBox="0 0 16 16" width="16"><g clip-path="url(#clip0_872_3147)">
+        <div id="contact-secondary-item-3" class="fella-contact-grid-item">
+            <svg class="fella-contact-grid-item-icon" height="16" stroke-linejoin="round" style="color: currentcolor;" viewBox="0 0 16 16" width="16"><g clip-path="url(#clip0_872_3147)">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M8 0C3.58 0 0 3.57879 0 7.99729C0 11.5361 2.29 14.5251 5.47 15.5847C5.87 15.6547 6.02 15.4148 6.02 15.2049C6.02 15.0149 6.01 14.3851 6.01 13.7154C4 14.0852 3.48 13.2255 3.32 12.7757C3.23 12.5458 2.84 11.836 2.5 11.6461C2.22 11.4961 1.82 11.1262 2.49 11.1162C3.12 11.1062 3.57 11.696 3.72 11.936C4.44 13.1455 5.59 12.8057 6.05 12.5957C6.12 12.0759 6.33 11.726 6.56 11.5261C4.78 11.3262 2.92 10.6364 2.92 7.57743C2.92 6.70773 3.23 5.98797 3.74 5.42816C3.66 5.22823 3.38 4.40851 3.82 3.30888C3.82 3.30888 4.49 3.09895 6.02 4.1286C6.66 3.94866 7.34 3.85869 8.02 3.85869C8.7 3.85869 9.38 3.94866 10.02 4.1286C11.55 3.08895 12.22 3.30888 12.22 3.30888C12.66 4.40851 12.38 5.22823 12.3 5.42816C12.81 5.98797 13.12 6.69773 13.12 7.57743C13.12 10.6464 11.25 11.3262 9.47 11.5261C9.76 11.776 10.01 12.2558 10.01 13.0056C10.01 14.0752 10 14.9349 10 15.2049C10 15.4148 10.15 15.6647 10.55 15.5847C12.1381 15.0488 13.5182 14.0284 14.4958 12.6673C15.4735 11.3062 15.9996 9.67293 16 7.99729C16 3.57879 12.42 0 8 0Z" fill="currentColor"></path>
             </g>
                 <defs>
@@ -58,12 +58,12 @@
                         <rect width="16" height="16" fill="white"></rect>
                     </clipPath>
                 </defs></svg>
-            <div class="contact-grid-item-secondary">
+            <div class="fella-contact-grid-item-secondary">
                 <b>Audit our software.</b> Everything we do is in the open, so you can know and trust that it works as you expect.
             </div>
-            <div class="contact-grid-item-buttons">
-                <a href="https://github.com/floofi-org" target="_blank" class="contact-grid-secondary-button btn btn-secondary btn-cta-small">
-                    <span class="btn-cta-text">View our GitHub</span>
+            <div class="fella-contact-grid-item-buttons">
+                <a href="https://github.com/floofi-org" target="_blank" class="fella-contact-grid-secondary-button fella-btn fella-btn-secondary fella-btn-cta-small">
+                    <span class="fella-btn-cta-text">View our GitHub</span>
                 </a>
             </div>
         </div>
