--- a/pages/legal--disclaimers.html
+++ b/pages/legal--disclaimers.html
@@ -2,31 +2,31 @@
     document.title = "Disclaimers – Floofi";
 </script>
 
-<section id="disclaimers" class="text-section linked">
+<section id="disclaimers" class="fella-section fella-section-linked">
     <p>Last Update: July 28th, 2024</p>
-    <h2 class="title">Disclaimers</h2>
+    <h2 class="fella-title">Disclaimers</h2>
 
-    <div id="disclaimers-header">
-        <div class="disclaimers-card" id="disclaimers-card-1">
-            <div class="disclaimers-card-inner">
-                <div class="disclaimers-card-header" id="disclaimers-card-1-header">
+    <div id="disclaimers-header" class="fella-overview">
+        <div class="fella-card fella-card-sm fella-card-modern" id="disclaimers-card-1">
+            <div class="fella-card-inner">
+                <div class="fella-card-header" id="disclaimers-card-1-header">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m16 16 3-8 3 8c-.87.65-1.92 1-3 1s-2.13-.35-3-1Z"/><path d="m2 16 3-8 3 8c-.87.65-1.92 1-3 1s-2.13-.35-3-1Z"/><path d="M7 21h10"/><path d="M12 3v18"/><path d="M3 7h2c2 0 5-1 7-2 2 1 5 2 7 2h2"/></svg>
                     <span class="disclaimers-card-title" id="disclaimers-card-1-title">Software and Source Code</span>
                 </div>
-                <div class="disclaimers-card-content" id="disclaimers-card-1-content">
-                    <div class="disclaimers-card-listing">
+                <div class="fella-card-content fella-card-content-small" id="disclaimers-card-1-content">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Free, libre and open-source</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Licensed under <a href="https://www.gnu.org/licenses/agpl-3.0.txt">GNU AGPLv3</a></span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Comes without any warranty</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Redistributable and modifiable</span>
                     </div>
@@ -34,26 +34,26 @@
             </div>
         </div>
 
-        <div class="disclaimers-card" id="disclaimers-card-2">
-            <div class="disclaimers-card-inner">
-                <div class="disclaimers-card-header" id="disclaimers-card-2-header">
+        <div class="fella-card fella-card-sm fella-card-modern" id="disclaimers-card-2">
+            <div class="fella-card-inner">
+                <div class="fella-card-header" id="disclaimers-card-2-header">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"/><circle cx="12" cy="10" r="3"/></svg>
                     <span class="disclaimers-card-title" id="disclaimers-card-2-title">Server Hosting</span>
                 </div>
-                <div class="disclaimers-card-content" id="disclaimers-card-2-content">
-                    <div class="disclaimers-card-listing">
+                <div class="fella-card-content fella-card-content-small" id="disclaimers-card-2-content">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Floofi (<a href="https://www.orange.fr/pages-juridiques/infos-legales.html">Orange SAS</a> in France)</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span><a href="https://www.scaleway.com/en/legal-notice/">Scaleway SAS</a> (Netherlands)</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span><a href="https://vercel.com/legal/terms">Vercel Inc.</a> (Worldwide)</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span><a href="https://policies.gitbook.com/terms">GitBook Inc.</a> (Worldwide)</span>
                     </div>
@@ -61,26 +61,26 @@
             </div>
         </div>
 
-        <div class="disclaimers-card" id="disclaimers-card-3">
-            <div class="disclaimers-card-inner">
-                <div class="disclaimers-card-header" id="disclaimers-card-3-header">
+        <div class="fella-card fella-card-sm fella-card-modern" id="disclaimers-card-3">
+            <div class="fella-card-inner">
+                <div class="fella-card-header" id="disclaimers-card-3-header">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 7V5a2 2 0 0 1 2-2h2"/><path d="M17 3h2a2 2 0 0 1 2 2v2"/><path d="M21 17v2a2 2 0 0 1-2 2h-2"/><path d="M7 21H5a2 2 0 0 1-2-2v-2"/><circle cx="12" cy="12" r="1"/><path d="M18.944 12.33a1 1 0 0 0 0-.66 7.5 7.5 0 0 0-13.888 0 1 1 0 0 0 0 .66 7.5 7.5 0 0 0 13.888 0"/></svg>
                     <span class="disclaimers-card-title" id="disclaimers-card-3-title">Warrant Canary</span>
                 </div>
-                <div class="disclaimers-card-content" id="disclaimers-card-3-content">
-                    <div class="disclaimers-card-listing">
+                <div class="fella-card-content fella-card-content-small" id="disclaimers-card-3-content">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Certifies integrity</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Updated every Sunday (± 48 hours)</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Signed with <a href="/publickey.txt">EFBDC68435A574B7</a></span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span><a href="/warrant.txt">Click here to view</a></span>
                     </div>
@@ -89,7 +89,7 @@
         </div>
     </div>
 
-    <section class="limited-width">
+    <section class="fella-limited-width">
         <h3 class="disclaimers-title" id="content">Content disclaimers</h3>
         <p>Unless in presence of user-created content, the content hosted on Floofi Systems's platforms is under the
             responsibility of Mia (<a href="/contact/start?i=10">contact</a>). Even though we make as much effort
@@ -170,7 +170,7 @@
         <p>Special note should be taken if these messages ever cease being updated, or are removed from this page.</p>
         <p><a href="https://github.com/starscouts.gpg">Alternative key source</a> • <a href="/warrant.txt">View warrant canary</a></p>
 
-        <div id="disclaimers-footer">
+        <div id="disclaimers-footer" class="fella-footnotes">
             <p>Some identifying information is not mentioned on this page for privacy reasons. If you require access to this
                 information, please contact us directly. Floofi reserves the right to amend this page and its content without
                 prior warning and without notice. For any inquiry, <a href="/contact/start?i=10">use our contact form</a>.</p>
