--- a/pages/legal--privacy.html
+++ b/pages/legal--privacy.html
@@ -2,31 +2,31 @@
     document.title = "Privacy Policy – Floofi";
 </script>
 
-<section id="disclaimers" class="text-section linked">
+<section id="disclaimers" class="fella-section fella-section-linked">
     <p>Last Update: July 31st, 2024</p>
-    <h2 class="title">Privacy Policy</h2>
+    <h2 class="fella-title">Privacy Policy</h2>
 
-    <div id="disclaimers-header">
-        <div class="disclaimers-card" id="disclaimers-card-1">
-            <div class="disclaimers-card-inner">
-                <div class="disclaimers-card-header" id="disclaimers-card-1-header">
+    <div id="disclaimers-header" class="fella-overview">
+        <div class="disclaimers-card fella-card fella-card-sm" id="disclaimers-card-1">
+            <div class="fella-card-inner">
+                <div class="fella-card-header" id="disclaimers-card-1-header">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 7V5c0-1.1.9-2 2-2h2"/><path d="M17 3h2c1.1 0 2 .9 2 2v2"/><path d="M21 17v2c0 1.1-.9 2-2 2h-2"/><path d="M7 21H5c-1.1 0-2-.9-2-2v-2"/><rect width="7" height="5" x="7" y="7" rx="1"/><rect width="7" height="5" x="10" y="12" rx="1"/></svg>
                     <span class="disclaimers-card-title" id="disclaimers-card-1-title">What is collected?</span>
                 </div>
-                <div class="disclaimers-card-content" id="disclaimers-card-1-content">
-                    <div class="disclaimers-card-listing">
+                <div class="fella-card-content fella-card-content-small" id="disclaimers-card-1-content">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Name</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Email address</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>IP address (for legal compliance)</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Usage statistics</span>
                     </div>
@@ -34,26 +34,26 @@
             </div>
         </div>
 
-        <div class="disclaimers-card" id="disclaimers-card-2">
-            <div class="disclaimers-card-inner">
-                <div class="disclaimers-card-header" id="disclaimers-card-2-header">
+        <div class="disclaimers-card fella-card fella-card-sm" id="disclaimers-card-2">
+            <div class="fella-card-inner">
+                <div class="fella-card-header" id="disclaimers-card-2-header">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></svg>
                     <span class="disclaimers-card-title" id="disclaimers-card-2-title">What is this data used for?</span>
                 </div>
-                <div class="disclaimers-card-content" id="disclaimers-card-2-content">
-                    <div class="disclaimers-card-listing">
+                <div class="fella-card-content fella-card-content-small" id="disclaimers-card-2-content">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Providing service</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Important communications</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Legal compliance</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Analytics and data aggregation</span>
                     </div>
@@ -61,26 +61,26 @@
             </div>
         </div>
 
-        <div class="disclaimers-card" id="disclaimers-card-3">
-            <div class="disclaimers-card-inner">
-                <div class="disclaimers-card-header" id="disclaimers-card-3-header">
+        <div class="disclaimers-card fella-card fella-card-sm" id="disclaimers-card-3">
+            <div class="fella-card-inner">
+                <div class="fella-card-header" id="disclaimers-card-3-header">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="4" x2="4" y1="21" y2="14"/><line x1="4" x2="4" y1="10" y2="3"/><line x1="12" x2="12" y1="21" y2="12"/><line x1="12" x2="12" y1="8" y2="3"/><line x1="20" x2="20" y1="21" y2="16"/><line x1="20" x2="20" y1="12" y2="3"/><line x1="2" x2="6" y1="14" y2="14"/><line x1="10" x2="14" y1="8" y2="8"/><line x1="18" x2="22" y1="16" y2="16"/></svg>
                     <span class="disclaimers-card-title" id="disclaimers-card-3-title">Which controls are available?</span>
                 </div>
-                <div class="disclaimers-card-content" id="disclaimers-card-3-content">
-                    <div class="disclaimers-card-listing">
+                <div class="fella-card-content fella-card-content-small" id="disclaimers-card-3-content">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Deletion or access at any time</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Secure infrastructure</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>No marketing or newsletters</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span><a href="/legal/disclaimers">Warrant Canary</a></span>
                     </div>
@@ -89,7 +89,7 @@
         </div>
     </div>
 
-    <section class="limited-width">
+    <section class="fella-limited-width">
         <h3 class="disclaimers-title">1. Introduction</h3>
         <p>
             Welcome to Floofi Systems, where we provide online services and open-source software for public use. Since
@@ -244,7 +244,7 @@
             consent from the affected users and allowing them to withdraw their consent at any time.
         </p>
 
-        <div id="disclaimers-footer">
+        <div id="disclaimers-footer" class="fella-footnotes">
             <p>Floofi reserves the right to amend this page and its content without
                 prior warning and without notice. For any inquiry, <a href="/contact/start?i=10">use our contact form</a>.</p>
         </div>
