--- a/pages/legal--terms.html
+++ b/pages/legal--terms.html
@@ -2,31 +2,31 @@
     document.title = "Terms of Use – Floofi";
 </script>
 
-<section id="disclaimers" class="text-section linked">
+<section id="disclaimers" class="fella-section fella-section-linked">
     <p>Last Update: July 31st, 2024</p>
-    <h2 class="title">Terms of Use</h2>
+    <h2 class="fella-title">Terms of Use</h2>
 
-    <div id="disclaimers-header">
-        <div class="disclaimers-card" id="disclaimers-card-1">
-            <div class="disclaimers-card-inner">
-                <div class="disclaimers-card-header" id="disclaimers-card-1-header">
+    <div id="disclaimers-header" class="fella-overview">
+        <div class="disclaimers-card fella-card fella-card-sm" id="disclaimers-card-1">
+            <div class="fella-card-inner">
+                <div class="fella-card-header" id="disclaimers-card-1-header">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M22 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>
                     <span class="disclaimers-card-title" id="disclaimers-card-1-title">Who can use the services?</span>
                 </div>
-                <div class="disclaimers-card-content" id="disclaimers-card-1-content">
-                    <div class="disclaimers-card-listing">
+                <div class="fella-card-content fella-card-content-small" id="disclaimers-card-1-content">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>15+ years old/legal binding age</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Not in a restricted location</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Only register when needed</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Anyone following these terms</span>
                     </div>
@@ -34,26 +34,26 @@
             </div>
         </div>
 
-        <div class="disclaimers-card" id="disclaimers-card-2">
-            <div class="disclaimers-card-inner">
-                <div class="disclaimers-card-header" id="disclaimers-card-2-header">
+        <div class="disclaimers-card fella-card fella-card-sm" id="disclaimers-card-2">
+            <div class="fella-card-inner">
+                <div class="fella-card-header" id="disclaimers-card-2-header">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m16 16 3-8 3 8c-.87.65-1.92 1-3 1s-2.13-.35-3-1Z"/><path d="m2 16 3-8 3 8c-.87.65-1.92 1-3 1s-2.13-.35-3-1Z"/><path d="M7 21h10"/><path d="M12 3v18"/><path d="M3 7h2c2 0 5-1 7-2 2 1 5 2 7 2h2"/></svg>
                     <span class="disclaimers-card-title" id="disclaimers-card-2-title">What are the rules to respect?</span>
                 </div>
-                <div class="disclaimers-card-content" id="disclaimers-card-2-content">
-                    <div class="disclaimers-card-listing">
+                <div class="fella-card-content fella-card-content-small" id="disclaimers-card-2-content">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Follow the laws of France</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Not disturb operation</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Respect intellectual property</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Provide accurate information</span>
                     </div>
@@ -61,26 +61,26 @@
             </div>
         </div>
 
-        <div class="disclaimers-card" id="disclaimers-card-3">
-            <div class="disclaimers-card-inner">
-                <div class="disclaimers-card-header" id="disclaimers-card-3-header">
+        <div class="disclaimers-card fella-card fella-card-sm" id="disclaimers-card-3">
+            <div class="fella-card-inner">
+                <div class="fella-card-header" id="disclaimers-card-3-header">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M13 4h3a2 2 0 0 1 2 2v14"/><path d="M2 20h3"/><path d="M13 20h9"/><path d="M10 12v.01"/><path d="M13 4.562v16.157a1 1 0 0 1-1.242.97L5 20V5.562a2 2 0 0 1 1.515-1.94l4-1A2 2 0 0 1 13 4.561Z"/></svg>
                     <span class="disclaimers-card-title" id="disclaimers-card-3-title">How are the services available?</span>
                 </div>
-                <div class="disclaimers-card-content" id="disclaimers-card-3-content">
-                    <div class="disclaimers-card-listing">
+                <div class="fella-card-content fella-card-content-small" id="disclaimers-card-3-content">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>May be discontinued or modified</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>No uptime/maintenance guarantee</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Inactive accounts may be removed</span>
                     </div>
-                    <div class="disclaimers-card-listing">
+                    <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span>Accounts can be removed arbitrarily</span>
                     </div>
@@ -89,7 +89,7 @@
         </div>
     </div>
 
-    <section class="limited-width">
+    <section class="fella-limited-width">
         <h3 class="disclaimers-title">1. Introduction</h3>
         <p>
             By using our services, you agree to these Terms of Service. If you do not agree, please do not use our
@@ -255,7 +255,7 @@
             <a href="/contact/start?i=10">use the contact form</a> on our website.
         </p>
 
-        <div id="disclaimers-footer">
+        <div id="disclaimers-footer" class="fella-footnotes">
             <p>Floofi reserves the right to amend this page and its content without
                 prior warning and without notice. For any inquiry, <a href="/contact/start?i=10">use our contact form</a>.</p>
         </div>
