Update to Fella 0.2.1

--- a/app.html
+++ b/app.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Floofi</title>
     <link rel="icon" href="/assets/img/favicon.png">
-    <link rel="stylesheet" href="/assets/fella/fella.css">
+    <link rel="stylesheet" href="https://fella.floo.fi/0.2.1/fella.min.css" integrity="sha384-vwDOYJTPOErlz2FWAdKOMg2GeCkpmeoGCHs8ovVXkHHbl4eRmrtbMUv/sPXcr+5r" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
