Fix flash of unstyled content on Firefox

--- a/app.html
+++ b/app.html
@@ -250,5 +250,9 @@
     <script src="/assets/src/debug.js"></script>
     <script src="https://status.floo.fi/src/decoder.js"></script>
     <script src="https://status.floo.fi/src/config.js"></script>
+
+    <script>
+        let FF_FOUC_FIX;
+    </script>
 </body>
 </html>
