--- a/pages/credits.html
+++ b/pages/credits.html
@@ -45,7 +45,7 @@
         <img src="/assets/img/powered-by-vercel.svg" id="credits-powered-logo" alt="Powered by Vercel">
     </a>
 
-    <div id="credits-footer">
+    <div id="credits-footer" class="fella-footnotes">
         <p>Codename "Oliver" • <span id="credits-version">-</span><br>
             © 2024 Floofi Systems, All rights reserved.</p>
         <p>The Judy Hopps name and character are © Disney, All rights reserved. The Sunny Starscout name and character
