Optimize language code on me.floo.fi

--- a/pages/credits.html
+++ b/pages/credits.html
@@ -13,7 +13,7 @@
         <div>Judy Hopps<br>ryze312<br>Moonglow<br>Hailstorm</div>
 
         <div class="credits-grid-title">Testing (Early Access)</div>
-        <div>Moonwind<br>You!</div>
+        <div>Moonwind<br>ryze312<br>You!</div>
 
         <div class="credits-grid-title">Design Consulting</div>
         <div>ryze312<br>Hailstorm<br>Moonglow<br>OliCantDecide<br>Zenko</div>
