Make it work on Linux

--- a/me/index.html
+++ b/me/index.html
@@ -25,7 +25,7 @@
                         <h1 id="header-title">%lang.header%</h1>
                         <div id="header-description">
                             <p>%lang.aka%<span class="mobile-break"> • </span>%lang.description%</p>
-                            <div>%lang.pronouns% • %lang.species% <span class="hc">🐇</span> • %lang.floofi% @ <a href="https://floo.fi" target="_blank">Floofi</a><span class="mobile-break"> • </span>%lang.job% • 🇫🇷</div>
+                            <div>%lang.pronouns% • %lang.species% <span class="hc">🐇</span> • <a href="https://floo.fi" target="_blank">Floofi</a> (%lang.floofi%)<span class="mobile-break"> • </span>%lang.job% • 🇫🇷</div>
                         </div>
                     </div>
                 </div>
