Add Azure to disclaimers

--- a/pages/legal--disclaimers.html
+++ b/pages/legal--disclaimers.html
@@ -47,15 +47,15 @@
                     </div>
                     <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
+                        <span><a href="https://www.microsoft.com/en-us/legal/terms-of-use">Microsoft Azure</a> (Ireland)</span>
+                    </div>
+                    <div class="fella-overview-listing">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                         <span><a href="https://www.scaleway.com/en/legal-notice/">Scaleway SAS</a> (Netherlands)</span>
                     </div>
                     <div class="fella-overview-listing">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
-                        <span><a href="https://vercel.com/legal/terms">Vercel Inc.</a> (Worldwide)</span>
-                    </div>
-                    <div class="fella-overview-listing">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
-                        <span><a href="https://policies.gitbook.com/terms">GitBook Inc.</a> (Worldwide)</span>
+                        <span><a href="https://vercel.com/legal/terms">Vercel</a>/<a href="https://policies.gitbook.com/terms">GitBook</a> (Worldwide)</span>
                     </div>
                 </div>
             </div>
@@ -104,6 +104,10 @@
         <p>Services hosted in France are provided by Floofi Systems near or in Orléans, Loiret, Centre Loire-Valley.
             Internet access for these services is managed by <a href="https://www.orange.fr/pages-juridiques/infos-legales.html">Orange SAS</a>,
             a French internet service provider (ISP) operating in France and other countries.</p>
+
+        <p>Services hosted in the Ireland are provided by <a href="https://www.microsoft.com/en-us/legal/terms-of-use">Microsoft Azure</a>,
+            a US-based hosting provider operating in the US and other countries, near or in Ireland.
+            Please contact Microsoft for any issue related the use of these services.</p>
 
         <p>Services hosted in the Netherlands are provided by <a href="https://www.scaleway.com/en/legal-notice/">Scaleway SAS</a>,
             a French hosting provider operating in France and other countries, near or in Amsterdam.
