Add cache support and donate button

--- a/app.html
+++ b/app.html
@@ -182,7 +182,8 @@
                 </ul>
             </div>
             <div id="navbar-inner-right" class="fella-nav-right">
-                <a href="/contact" class="fella-btn fella-btn-secondary">Contact</a>
+                <a href="https://ko-fi.com/starscouts" target="_blank" class="fella-btn fella-btn-secondary">Donate</a>
+                <a href="/contact" class="fella-btn fella-btn-primary">Contact</a>
             </div>
         </nav>
     </header>
