Add redirect for old website, change "Judy" with "Starscouts"

--- a/app.html
+++ b/app.html
@@ -177,7 +177,7 @@
                         <a href="https://blog.floo.fi" class="fella-nav-navigation-item-link">Blog</a>
                     </li>
                     <li class="fella-nav-navigation-item">
-                        <a href="https://me.floo.fi" class="fella-nav-navigation-item-link">Judy</a>
+                        <a href="https://me.floo.fi" class="fella-nav-navigation-item-link">Starscouts</a>
                     </li>
                 </ul>
             </div>
