--- a/pages/credits.html
+++ b/pages/credits.html
@@ -7,13 +7,13 @@
 
     <div id="credits-grid">
         <div class="credits-grid-title">Lead<br>Programming<br>Design</div>
-        <div>Judy Hopps</div>
+        <div>Starscouts</div>
 
         <div class="credits-grid-title">Testing (Development)</div>
-        <div>Judy Hopps<br>ryze312<br>Moonglow<br>Hailstorm</div>
+        <div>Starscouts<br>ryze312<br>Moonglow<br>Hailstorm</div>
 
         <div class="credits-grid-title">Testing (Early Access)</div>
-        <div>Moonwind<br>ryze312<br>You!</div>
+        <div>Moonglow<br>ryze312<br>Mis1ify</div>
 
         <div class="credits-grid-title">Design Consulting</div>
         <div>ryze312<br>Hailstorm<br>Moonglow<br>OliCantDecide<br>Zenko</div>
