--- a/pages/home.html
+++ b/pages/home.html
@@ -3,12 +3,12 @@
 </script>
 
 <section id="home">
-    <!--<div id="home-notice" class="fella-header">
-        Thank you for being part of the Early Access Program. Please visit various parts of the website on various devices.
-        <a href="mailto:hello@equestria.dev" class="fella-btn fella-btn-secondary fella-btn-cta-small fella-header-btn" id="home-notice-btn">
-            <span class="fella-btn-cta-text">Send a Bug Report</span>
+    <div id="home-notice" class="fella-header">
+        Equestria.dev is now Floofi.
+        <a href="https://blog.floo.fi/home/equestria.dev-is-now-floofi" target="_blank" class="fella-btn fella-btn-secondary fella-btn-cta-small fella-header-btn" id="home-notice-btn">
+            <span class="fella-btn-cta-text">Learn More</span>
         </a>
-    </div>-->
+    </div>
     <div id="home-hero" class="fella-hero">
         <div id="home-hero-inner" class="fella-hero-inner">
             <div id="home-hero-text" class="fella-hero-text">
