Add analytics to me.floo.fi

--- a/me/index.html
+++ b/me/index.html
@@ -16,6 +16,8 @@
     <meta property="og:image" content="https://www.gravatar.com/avatar/890db7c4dc714ef83d95d4291bd40737.jpg?s=630">
     <meta property="og:url" content="https://me.floo.fi">
     <meta property="og:type" content="profile">
+    <script defer data-domain="me.floo.fi" src="https://insights.floo.fi/js/script.file-downloads.hash.outbound-links.js"></script>
+    <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 </head>
 <body>
     <div id="loader" style="background-color: black; position: fixed; inset: 0; z-index: 9; display: flex; align-items: center; justify-content: center;">
